Adição dos botões de "Criar Tarefa" e "Cancelar", assim como alteração de colorPrimary para "black".

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="hint_detalhes">Detalhes</string>
     <string name="hint_data">Data</string>
     <string name="hint_hora">Hora</string>
+    <string name="text_criar_tarefa">Criar Tarefa</string>
+    <string name="text_cancelar">Cancelar</string>
 </resources>
