Adição do Recycler View no activity_main.xml, criação do layout das Tasks (item_task.xml), criação do adapter (TaskListAdapter.kt) e inserção do mesmo na MainActivity.kt.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">MyToDoList</string>
     <string name="tv_tarefas">Tarefas</string>
-    <string name="description_adicionar">Sinal de adição</string>
+    <string name="description_adicionar">Adicionar Tarefa</string>
     <string name="tb_titulo">Criar Tarefa</string>
     <string name="hint_titulo">Título</string>
     <string name="hint_detalhes">Detalhes</string>
