--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="hint_data">Data</string>
     <string name="hint_hora">Hora</string>
     <string name="text_cancelar">Cancelar</string>
+    <string name="label_editar">Editar</string>
+    <string name="label_deletar">Deletar</string>
 </resources>
