--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="label_deletar">Deletar</string>
     <string name="data_hora">%1$s %2$s</string>
     <string name="text_alterar_tarefa">Alterar Tarefa</string>
+    <string name="label_empty_state">Ops! Você não possui \n nenhuma tarefa</string>
 </resources>
